[package]
name = "keyboard_notification_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent-queue = "2.2.0"
css-color-parser = "0.1.2"
dbus = { version = "0.9.7", features = ["futures", "futures-channel", "futures-executor", "futures-util", "stdfd"] }
dbus-tokio = "0.7.6"
once_cell = "1.18.0"
openrgb = "0.1.2"
tokio = { version = "1.29.1", features = ["macros", "io-util", "time"] }
