[package]
name = "keyboard_notification_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic = { version = "0.5.3", features = ["std"] }
color-hex = "0.2.0"
concurrent-queue = "2.2.0"
css-color-parser = "0.1.2"
dashmap = { version = "5.5.0", features = ["inline"] }
dbus = { version = "0.9.7", features = ["stdfd"] }
env_logger = "0.11.1"
log = "0.4.20"
once_cell = "1.18.0"
openrgb = "0.1.2"
rand = "0.8.5"
serde_json = "1.0.102"
signal-hook = "0.3.17"
tokio = { version = "1.29.1", features = ["macros", "io-util", "time"] }
